--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
         "tsdx": "^0.14.1",
         "tslib": "^2.5.2",
         "typescript": "^3.9.10"
+    },
+    "dependencies": {
+        "js-sha256": "^0.10.1"
     }
 }
