--- a/demo/package.json
+++ b/demo/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^16.18.53",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "digilocker-sdk": "^0.1.2",
+    "digilocker-sdk": "file:../digilocker-sdk",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
